# IoT-Praktikum

./: .gitignore  sdkconfig  sdkconfig.old
k8s/coarsen-data/: coarsen_data.yaml
k8s/grafana-k8s/: grafana-deployment.yaml
main/: CMakeLists.txt  ble_tag.c  ble_tag.h  configPM.c  configPM.h  controlflow.c  device_handling.c  device_handling.h  ext_clock.c  ext_clock.h  flash_init.c  flash_init.h  gauge.c  identify_device.c  identify_device.h  init_logging.c  init_logging.h  initialize.c  initialize.h  main.c  main.h  mqtt.c  mqtt.h  periodic_wakeup_timer.c  sensor_setup.c  sntp.c  wifi.c  wifi.h
main/hardware/: ble_tag.c  device_handling.c  device_handling.h  identify_device.c  identify_device.h
main/init/: configPM.c  configPM.h  flash_init.c  flash_init.h  initialize.c  sensor_setup.c  sensor_setup.h  watchdog.c  watchdog.h
main/time/: ext_clock.c  ext_clock.h  periodic_wakeup_timer.c  periodic_wakeup_timer.h  sleep_minutes.c  sleep_minutes.h  sntp.c
scripts/: Dockerfile  README.md  coarsen_data.ipynb  coarsen_data.py  cronjob  install_requirements.bat  requirements.txt  setup.bat
